<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialFragment">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/appNameCapital"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/subtitleVahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/charm_bold"
        android:text="@string/appNameFullForm"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewInitialFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:elevation="64dp"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleVahan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cardViewMap"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/experts_near_you"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/explore_experts_in_your_region_talk_with_them_to_get_assurance_and_assistance_about_your_vehicle"
                android:textAllCaps="false"
                android:textSize="12sp" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtnInitialFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="72dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/green_color"
        android:fontFamily="@font/poppins_bold"
        android:padding="8dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInitialFragment" />

    <Button
        android:id="@+id/alreadyVeAccBtnInitialFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/black"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtnInitialFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>